# compiler

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  build.py  build.sh  nex.ebnf  version.txt
examples/: attr.nex  errors.nex  parsing.nex
examples/test/: 1.nex
examples/α-roadmap/: 1.nex  2.nex  3.nex  4.nex
include/: ast.h  codegen.h  lexer.h  p_info.h  parser.h  sao.h  stack.h  symtbl.h  token.h
include/tmp/: alphadev.c  alphadev.h
src/: AST.c  ast.c  codegen.c  io.c  lexer.c  main.c  parser.c  sao.c  stack.c  symtbl.c
src/asm/: mep.asm  return.asm
tests/: lexer_test.c  parser_test.c  symtbl_test.c
